assets/css/style.css
/* ... */
.testimonial .image {
    height: 170px;
    width: 170px;
    object-fit: cover;
    border-radius: 50%;
  }
  .testimonial .slide {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    row-gap: 30px;
    height: 100%;
    width: 100%;
  }
  .slide p {
    text-align: center;
    padding: 0 160px;
    font-size: 18px;
    font-weight: 400;
    color: #212529;
    font-weight: 500;
  }
  .slide .quote-icon {
    font-size: 30px;
    color: var(--blue);
  }
  .slide .details {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .details .name {
    font-size: 16px;
    font-weight: 600;
    color: #212529;
  }
  /* swiper button css */
  .nav-btn {
    height: 40px;
    width: 40px;
    transform: translateY(30px);
    transition: 0.2s;
  }
  .nav-btn::after,
  .nav-btn::before {
    font-size: 40px;
    color: var(--blue);
  }
  .nav-btn:hover::after,
  .nav-btn:hover::before {
    opacity: 75%;
  }
  .swiper-pagination-bullet {
    background-color: rgba(0, 0, 0, 0.8);
  }
  .swiper-pagination-bullet-active {
    background-color: var(--blue);
  }
  @media screen and (max-width: 768px) {
    .slide p {
      padding: 0 20px;
    }
    .nav-btn {
      display: none;
    }
  }
  

#quotes {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    gap: 10px;

}
#quotes > li {
    position: relative;
    padding: 10px;
}
#quotes .quote {
    font-family: "Abhaya Libre";
    font-size: 25px;
    font-weight: bold;
}
#quotes .author {
    font-style: italic;
    font-weight: 600;
    font-size: 18px;
    color: var(--teal);
}
#contactus {
    margin-top: 50px;
}
#contactus-btn {
    margin: 30px 0
}
.gallery-btn {
    color: white;
    font-size: 40px;
    font-weight: 700;
    background-color: gray;
    width: 100%;
}
#contact-us {
    z-index: 998;
    width: 100%;
    padding: 100px 50px;
    flex-direction: column;
    margin-top: 50px;
    margin-bottom: 50px;
    justify-content: center;

}
#contact-us .content {
    justify-content: center;
}
#footer {
    z-index: 999;
    background-color: white;
    box-shadow: 0 -5px 0 0 var(--pink);
    /* outline: 5px solid var(--pink); */
    width: 100%;
    padding: 10px 30px;
    padding-top: 20px;
    position: relative;
}
ul {
    list-style-type: none;
    padding-left: unset;
}
#footer #logo-img{
    width: 100px;
}
#footer a, .socials li{
    text-decoration: unset;
    color: #212529;
}
#footer h2 {
    font-family: "Abhaya Libre";
    font-weight: 800;
    color: #212529;
}
.footer-contact-modal {
    cursor: pointer;
}
.social-list {
    gap: 5px;
}
.social-icon {
    width: auto;
    font-size: 1.7em;
}
.socials a:hover {
    text-decoration: none;
}
.social-icon:hover {
    text-decoration: none;
}
.footer-content {
    display: flex;
    flex-basis: auto;
    justify-content: space-between;
    width: 100%;
}
.footer-extra {
    display: flex;
    justify-content: flex-end;
    width: 50%;
    gap: 50px;
    /* width: 100%; */
    /* flex: 1 1 auto; */
}
.footer-extra div {
    display: flex;
    flex-direction: column;
}
#footer .socials i, #footer .socials img {
    margin-right: 5px;
}
.socials a {
    display: flex;
    flex-direction: row;
    align-items: baseline;
}
.social a {
    display: flex;
    flex-direction: row;
}
#footer .socials li {
    align-items: center;
}
#footer .copyright {
    text-align: start;
    padding-top: 15px;
    margin-bottom: 0;
}
#footer li:hover {
    text-decoration: underline;
}
#footer ul {
    margin-bottom: 0;
}
.footer-logo-mobile {
    display: none;
}
#footer .copyright i {
    font-size: .85rem;
}
.images {
    --bs-gutter-y: 1.5rem;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1001;
    /* padding-top: 100px; */
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    background-color: black;
}
.modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    height: fit-content;
    max-width: 1200px;
}
.close {
    color: white;
    position: absolute;
    top: 10px;
    right: 25px;
    font-size: 35px;
    font-weight: bold;
  }
  
.close:hover,
.close:focus {
    color: #999;
    text-decoration: none;
    cursor: pointer;
}
.caption-container {
    text-align: center;
    background-color: black;
    padding: 2px 16px;
    color: white;
  }
.lb-image {
    border: none !important;
}
/* ... */

